chore(lint): fix noVar rule and remove from config
- Fixed linting issues related to the rule
- Restored the rule to default settings

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -29,8 +29,7 @@
         "noParameterAssign": "warn",
         "useDefaultParameterLast": "warn",
         "noCommaOperator": "warn",
-        "useSingleVarDeclarator": "warn",
-        "noVar": "warn"
+        "useSingleVarDeclarator": "warn"
       },
       "correctness": {
         "noSwitchDeclarations": "warn",
