--- a/biome.jsonc
+++ b/biome.jsonc
@@ -22,8 +22,7 @@
         "noUnusedTemplateLiteral": "warn",
         "noNonNullAssertion": "warn",
         "noParameterAssign": "warn",
-        "noCommaOperator": "warn",
-        "useSingleVarDeclarator": "warn"
+        "noCommaOperator": "warn"
       },
       "correctness": {
         "noSwitchDeclarations": "warn",
