chore(lint): fix useOptionalChain rule and remove from config

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -30,8 +30,7 @@
       },
       "complexity": {
         "noForEach": "off",
-        "noBannedTypes": "warn",
-        "useOptionalChain": "warn"
+        "noBannedTypes": "warn"
       },
       "performance": {
         "noDelete": "warn",
