--- a/biome.jsonc
+++ b/biome.jsonc
@@ -32,8 +32,7 @@
         "noBannedTypes": "warn"
       },
       "performance": {
-        "noDelete": "warn",
-        "noAccumulatingSpread": "warn"
+        "noDelete": "warn"
       }
     }
   },
