Refactor/biome code style (#628)
* chore(lint): restore useArrowFunction fixes for bound functions and ignore rule

* chore(lint): remove linter rules from config

* chore(lint): fix noVar rule and remove from config

- Fixed linting issues related to the rule
- Restored the rule to default settings

* chore(lint): fix noImplicitAnyLet rule and remove from config

- Fixed linting issues related to the rule
- Restored the rule to default settings

* chore(lint): fix noGlobalIsNan rule and remove from config

- Fixed linting issues related to the rule
- Restored the rule to default settings

* chore(lint): fix noUselessElse rule and remove from config

* chore(lint): fix useNodejsImportProtocol rule and remove from config

* chore(lint): fix useTemplate rule and remove from config

* chore(lint): fix useDefaultParameterLast rule and remove from config

* chore(lint): fix useSingleVarDeclarator rule and remove from config

* chore(lint): fix noSwitchDeclarations rule and remove from config

* chore(lint): fix useLiteralKeys rule and remove from config

* chore(lint): fix noUselessSwitchCase rule and remove from config

* chore(lint): fix noUselessConstructor rule and remove from config

* chore(lint): fix noUselessTernary rule and remove from config

* chore(lint): fix noExtraBooleanCast rule and remove from config

* chore(lint): fix useOptionalChain rule and remove from config

* chore(lint): fix noUnusedTemplateLiteral rule and remove from config

* chore(lint): fix noAccumulatingSpread rule and remove from config

* chore(lint): ignore linter warnings

* chore(lint): update linter rules config

* chore(lint): remove <explanation> placeholder in biome-ignore comments

* Revert "chore(lint): restore useArrowFunction fixes for bound functions and ignore rule"

This reverts commit b2a82030e5b1603c65bf02f13cf583fb70fc81f0.
Resolved here: https://github.com/opennextjs/opennextjs-aws/pull/627#discussion_r1836545232


--- a/biome.jsonc
+++ b/biome.jsonc
@@ -14,49 +14,21 @@
         "all": false
       },
       "suspicious": {
-        "noExplicitAny": "info",
-        "noGlobalIsNan": "warn",
-        "noImplicitAnyLet": "warn",
-        "noAssignInExpressions": "warn",
-        "noConfusingVoidType": "warn",
-        "useNamespaceKeyword": "warn" // safe fix
+        "noExplicitAny": "off",
+        "noAssignInExpressions": "off",
+        "noConfusingVoidType": "off"
       },
       "style": {
-        "noUnusedTemplateLiteral": "warn",
-        "noInferrableTypes": "warn", // safe fix
-        "noUselessElse": "warn",
-        "useNodejsImportProtocol": "warn",
-        "useTemplate": "warn",
-        "useNumberNamespace": "warn", // safe fix
-        "noNonNullAssertion": "warn",
-        "useImportType": "warn",
-        "noParameterAssign": "warn",
-        "useDefaultParameterLast": "warn",
-        "noCommaOperator": "warn",
-        "useConst": "warn",
-        "useSingleVarDeclarator": "warn",
-        "noVar": "warn",
-        "useShorthandFunctionType": "warn" // safe fix
-      },
-      "correctness": {
-        "noSwitchDeclarations": "warn",
-        "noUnnecessaryContinue": "warn",
-        "noInnerDeclarations": "warn"
+        "noNonNullAssertion": "off",
+        "noParameterAssign": "info",
+        "noCommaOperator": "info"
       },
       "complexity": {
-        "useLiteralKeys": "warn",
         "noForEach": "off",
-        "noUselessSwitchCase": "warn",
-        "noUselessConstructor": "warn",
-        "noBannedTypes": "warn",
-        "noUselessTernary": "warn",
-        "useArrowFunction": "warn", // safe fix
-        "noExtraBooleanCast": "warn",
-        "useOptionalChain": "warn"
+        "noBannedTypes": "off"
       },
       "performance": {
-        "noDelete": "warn",
-        "noAccumulatingSpread": "warn"
+        "noDelete": "off"
       }
     }
   },
@@ -66,7 +38,7 @@
       "linter": {
         "rules": {
           "suspicious": {
-            "noRedeclare": "warn"
+            "noRedeclare": "off"
           }
         }
       }
@@ -76,15 +48,15 @@
       "linter": {
         "rules": {
           "style": {
-            "useSelfClosingElements": "warn"
+            "useSelfClosingElements": "off"
           },
           "correctness": {
-            "useJsxKeyInIterable": "warn",
-            "useExhaustiveDependencies": "warn"
+            "useJsxKeyInIterable": "off",
+            "useExhaustiveDependencies": "off"
           },
           "suspicious": {
-            "noArrayIndexKey": "warn",
-            "noRedeclare": "warn"
+            "noArrayIndexKey": "off",
+            "noRedeclare": "off"
           }
         }
       }
