--- a/examples/app-router/package.json
+++ b/examples/app-router/package.json
@@ -12,15 +12,15 @@
   },
   "dependencies": {
     "@example/shared": "workspace:*",
-    "next": "15.0.1",
+    "next": "catalog:",
     "@opennextjs/aws": "workspace:*",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021"
+    "react": "catalog:",
+    "react-dom": "catalog:"
   },
   "devDependencies": {
-    "@types/node": "20.5.0",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "@types/node": "catalog:",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
     "autoprefixer": "10.4.15",
     "postcss": "8.4.27",
     "tailwindcss": "3.3.3",
