--- a/examples/pages-router/package.json
+++ b/examples/pages-router/package.json
@@ -12,17 +12,17 @@
   },
   "dependencies": {
     "@example/shared": "workspace:*",
-    "@types/node": "20.5.0",
+    "@types/node": "catalog:",
     "autoprefixer": "10.4.15",
-    "next": "15.0.1",
+    "next": "catalog:",
     "postcss": "8.4.27",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react": "catalog:",
+    "react-dom": "catalog:",
     "tailwindcss": "3.3.3",
     "typescript": "^4.9.3"
   },
   "devDependencies": {
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:"
   }
 }
