--- a/examples/app-pages-router/package.json
+++ b/examples/app-pages-router/package.json
@@ -21,9 +21,9 @@
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
-    "autoprefixer": "10.4.15",
-    "postcss": "8.4.27",
-    "tailwindcss": "3.3.3",
-    "typescript": "^4.9.3"
+    "autoprefixer": "catalog:",
+    "postcss": "catalog:",
+    "tailwindcss": "catalog:",
+    "typescript": "catalog:"
   }
 }
