--- a/examples/app-router/package.json
+++ b/examples/app-router/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "@example/shared": "workspace:*",
-    "next": "catalog:",
     "@opennextjs/aws": "workspace:*",
+    "next": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:"
   },
@@ -21,9 +21,9 @@
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
-    "autoprefixer": "10.4.15",
-    "postcss": "8.4.27",
-    "tailwindcss": "3.3.3",
-    "typescript": "^4.9.3"
+    "autoprefixer": "catalog:",
+    "postcss": "catalog:",
+    "tailwindcss": "catalog:",
+    "typescript": "catalog:"
   }
 }
