--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -9,3 +9,7 @@ catalog:
   "@types/node": 20.5.0
   "@types/react": npm:types-react@19.0.0-rc.1
   "@types/react-dom": npm:types-react-dom@19.0.0-rc.1
+  autoprefixer: 10.4.15
+  postcss: 8.4.27
+  tailwindcss: 3.3.3
+  typescript: 5.6.3
