add: pnpm catalog (#637)
* add catalog to workspace

* update package.json dependencies in examples to use catalog references

* lockfile

* review

* add catalog to utils

* add catalog to opennext package

* pnpm install

* update @types/node to latest

--- a/examples/app-router/package.json
+++ b/examples/app-router/package.json
@@ -12,18 +12,18 @@
   },
   "dependencies": {
     "@example/shared": "workspace:*",
-    "next": "15.0.1",
     "@opennextjs/aws": "workspace:*",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021"
+    "next": "catalog:",
+    "react": "catalog:",
+    "react-dom": "catalog:"
   },
   "devDependencies": {
-    "@types/node": "20.5.0",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "autoprefixer": "10.4.15",
-    "postcss": "8.4.27",
-    "tailwindcss": "3.3.3",
-    "typescript": "^4.9.3"
+    "@types/node": "catalog:",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
+    "autoprefixer": "catalog:",
+    "postcss": "catalog:",
+    "tailwindcss": "catalog:",
+    "typescript": "catalog:"
   }
 }
