--- a/biome.jsonc
+++ b/biome.jsonc
@@ -33,6 +33,9 @@
       },
       "performance": {
         "noDelete": "off"
+      },
+      "correctness": {
+        "noUnusedImports": "error"
       }
     }
   },
