--- a/packages/open-next/package.json
+++ b/packages/open-next/package.json
@@ -34,6 +34,7 @@
     "README.md"
   ],
   "dependencies": {
+    "@aws-sdk/client-cloudfront": "3.398.0",
     "@aws-sdk/client-dynamodb": "^3.398.0",
     "@aws-sdk/client-lambda": "^3.398.0",
     "@aws-sdk/client-s3": "^3.398.0",
