--- a/packages/open-next/package.json
+++ b/packages/open-next/package.json
@@ -45,12 +45,14 @@
     "aws4fetch": "^1.0.18",
     "chalk": "^5.3.0",
     "esbuild": "0.19.2",
+    "express": "5.0.1",
     "path-to-regexp": "^6.3.0",
     "promise.series": "^0.2.0",
     "urlpattern-polyfill": "^10.0.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.109",
+    "@types/express": "5.0.0",
     "@types/node": "catalog:",
     "tsc-alias": "^1.8.8",
     "typescript": "catalog:"
