Update package.json exports for types

--- a/packages/open-next/package.json
+++ b/packages/open-next/package.json
@@ -17,7 +17,8 @@
     "dev": "tsc -w"
   },
   "exports": {
-    "./*": "./dist/*"
+    "default": "./dist/*",
+    "types": "./dist/*.d.ts"
   },
   "typesVersions": {
     "*": {
