Update package.json exports for types imports (#747)
* Update package.json exports for types

* Update packages/open-next/package.json

Co-authored-by: Victor Berchet <victor@suumit.com>

* Update package.json to remove typesVersions

---------

Co-authored-by: Victor Berchet <victor@suumit.com>

--- a/packages/open-next/package.json
+++ b/packages/open-next/package.json
@@ -17,13 +17,9 @@
     "dev": "tsc -w"
   },
   "exports": {
-    "./*": "./dist/*"
-  },
-  "typesVersions": {
-    "*": {
-      "*": [
-        "dist/*"
-      ]
+    "./*": {
+      "default": "./dist/*",
+      "types": "./dist/*.d.ts"
     }
   },
   "keywords": [],
