--- a/packages/open-next/package.json
+++ b/packages/open-next/package.json
@@ -22,6 +22,13 @@
       "types": "./dist/*.d.ts"
     }
   },
+  "typesVersions": {
+    "*": {
+      "*": [
+        "dist/*"
+      ]
+    }
+  },
   "keywords": [],
   "author": "",
   "files": [
