add methods to app-router

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -46,6 +46,9 @@
         "rules": {
           "suspicious": {
             "noRedeclare": "off"
+          },
+          "complexity": {
+            "useLiteralKeys": "off"
           }
         }
       }
