Feat: Generic Code Patching (#781)
* poc for code patching

* review fix

* fix build

* use ContentUpdater plugin

* added ast-grep code patcher

* added some manifests

* fix and add logs

* fix to apply patch one after the other

* review fix

* improve typing

* simplified CodePatcher types

* fix linting

* changed versions to be more user friendly

* review

* review fix

--- a/packages/open-next/package.json
+++ b/packages/open-next/package.json
@@ -37,6 +37,7 @@
     "README.md"
   ],
   "dependencies": {
+    "@ast-grep/napi": "^0.35.0",
     "@aws-sdk/client-cloudfront": "3.398.0",
     "@aws-sdk/client-dynamodb": "^3.398.0",
     "@aws-sdk/client-lambda": "^3.398.0",
@@ -50,7 +51,8 @@
     "esbuild": "0.19.2",
     "express": "5.0.1",
     "path-to-regexp": "^6.3.0",
-    "urlpattern-polyfill": "^10.0.0"
+    "urlpattern-polyfill": "^10.0.0",
+    "yaml": "^2.7.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.109",
