--- a/packages/open-next/package.json
+++ b/packages/open-next/package.json
@@ -50,6 +50,7 @@
     "chalk": "^5.3.0",
     "esbuild": "0.19.2",
     "express": "5.0.1",
+    "glob": "catalog:",
     "path-to-regexp": "^6.3.0",
     "urlpattern-polyfill": "^10.0.0",
     "yaml": "^2.7.0"
