--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "e2e:test": "turbo run e2e:test",
     "version": "./.changeset/version",
     "release": "./.changeset/release",
-    "release-snapshot": "./.changeset/snapshot"
-    
+    "release-snapshot": "./.changeset/snapshot",
+    "release-v2": "./.changeset/release-v2"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.4",
     "@changesets/cli": "^2.22.0",
     "@sladg/eslint-config-base": "1.4.1",
     "eslint": "^8.47.0",
-     "turbo": "1.10.12"
+    "turbo": "1.10.12"
   },
   "engines": {
     "node": ">=16",
