--- a/examples/experimental/package.json
+++ b/examples/experimental/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "openbuild": "node ../../packages/open-next/dist/index.js build",
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack --port 3004",
     "build": "next build",
-    "start": "next start",
+    "start": "next start --port 3004",
     "lint": "next lint",
     "clean": "rm -rf .turbo node_modules .next .open-next"
   },
