--- a/turbo.json
+++ b/turbo.json
@@ -1,16 +1,26 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalEnv": ["APP_ROUTER_URL", "PAGES_ROUTER_URL", "APP_PAGES_ROUTER_URL"],
-  "pipeline": {
+  "globalEnv": [
+    "APP_ROUTER_URL",
+    "PAGES_ROUTER_URL",
+    "APP_PAGES_ROUTER_URL"
+  ],
+  "tasks": {
     "build": {
-      "dependsOn": ["^build"],
-      "outputs": ["dist/**"]
+      "dependsOn": [
+        "^build"
+      ],
+      "outputs": [
+        "dist/**"
+      ]
     },
     "e2e:test": {
       "cache": false
     },
     "test": {
-      "dependsOn": ["^build"],
+      "dependsOn": [
+        "^build"
+      ],
       "cache": false
     },
     "lint": {
