--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@changesets/changelog-github": "^0.4.4",
     "@changesets/cli": "^2.22.0",
     "pkg-pr-new": "^0.0.29",
-    "turbo": "^2.5.3"
+    "turbo": "catalog:"
   },
   "engines": {
     "node": ">=18",
