--- a/packages/open-next/package.json
+++ b/packages/open-next/package.json
@@ -48,6 +48,7 @@
     "@tsconfig/node18": "^1.0.1",
     "aws4fetch": "^1.0.18",
     "chalk": "^5.3.0",
+    "cookie": "^1.0.2",
     "esbuild": "catalog:",
     "express": "5.0.1",
     "path-to-regexp": "^6.3.0",
