chore(app-pages-router): Put proxy in front of the server functions

--- a/examples/app-pages-router/package.json
+++ b/examples/app-pages-router/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "openbuild": "node ../../packages/open-next/dist/index.js build --build-command \"npx turbo build\"",
+    "openbuild:local": "node ../../packages/open-next/dist/index.js build --config-path open-next.config.local.ts",
+    "openbuild:local:start": "tsx proxy.ts",
     "dev": "next dev --turbopack --port 3003",
     "build": "next build",
     "start": "next start --port 3003",
@@ -12,18 +14,21 @@
   },
   "dependencies": {
     "@example/shared": "workspace:*",
-    "next": "catalog:",
     "@opennextjs/aws": "workspace:*",
+    "express-http-proxy": "2.1.1",
+    "next": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:"
   },
   "devDependencies": {
+    "@types/express-http-proxy": "1.6.7",
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "autoprefixer": "catalog:",
     "postcss": "catalog:",
     "tailwindcss": "catalog:",
+    "tsx": "4.20.5",
     "typescript": "catalog:"
   }
 }
