--- a/examples/app-pages-router/tsconfig.json
+++ b/examples/app-pages-router/tsconfig.json
@@ -24,5 +24,10 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules",
+    "open-next.config.ts",
+    "open-next.config.local.ts",
+    "proxy.ts"
+  ]
 }
