chore(e2e): Add e2e-local action to check workflow
fix order

refactor check workflow order

fs-dev-nextMode for experimental

refactor env variable

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -4,6 +4,7 @@ on:
     pull_request:
         branches:
             - main
+    # workflow_dispatch:
 
 jobs:
     validate:
@@ -14,6 +15,8 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v4
-            - uses: ./.github/actions/pnpm-setup
+            - uses: ./.github/actions/setup
             - uses: ./.github/actions/lint
             - uses: ./.github/actions/test
+            - uses: ./.github/actions/local/build
+            - uses: ./.github/actions/local/e2e
