--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -113,22 +113,9 @@ jobs:
         run: pnpm add next@${{ needs.check_next_version.outputs.previousNextVersion }}
       # We do not install the latest canary of Next in the experimental app.
 
-      - name: Get Playwright version
-        id: playwright-version
-        run: echo "version=$(npm ls @playwright/test | grep @playwright | sed 's/.*@//' | sed 's/ .*//' )"
-
-      - name: Cache Playwright
-        uses: actions/cache@v4
-        id: playwright-cache
-        with:
-          path: "~/.cache/ms-playwright"
-          key: ${{ runner.os }}-playwright-${{ steps.playwright-version.outputs.version }}
-          restore-keys: |
-            ${{ runner.os }}-playwright-
-
-      - name: Install Playwright
-        if: steps.playwright-cache.outputs.cache-hit != 'true'
-        run: pnpm exec playwright install chromium --with-deps
+      # Setup playwright
+      - name: Setup Playwright
+        uses: ./.github/actions/setup-playwright
 
       # Cache turbo runs
       - name: Cache Turbo
