--- a/examples/pages-router/package.json
+++ b/examples/pages-router/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "openbuild": "node ../../packages/open-next/dist/index.js build --build-command \"npx turbo build\"",
     "openbuild:local": "node ../../packages/open-next/dist/index.js build --config-path open-next.config.local.ts",
+    "openbuild:local:start": "PORT=3002 node .open-next/server-functions/default/index.mjs",
     "dev": "next dev --turbopack --port 3002",
     "build": "next build",
     "start": "next start --port 3002",
