--- a/.github/workflows/v2-release.yml
+++ b/.github/workflows/v2-release.yml
@@ -12,9 +12,10 @@ jobs:
         uses: actions/checkout@v4
 
       # Setup .npmrc file to publish to npm
-      - uses: actions/setup-node@v4
+      - uses: actions/setup-node@v5
         with:
           registry-url: "https://registry.npmjs.org"
+          node-version: 20.x
 
       - uses: ./.github/actions/pnpm-setup
 
