ci: update deployment workflow to use npm trusted publishers

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -17,6 +17,13 @@ runs:
         node-version: ${{ inputs.node-version }}
         registry-url: ${{ inputs.registry-url }}
 
+    # Ensure npm 11.5.1 or later is installed
+    # See https://docs.npmjs.com/trusted-publishers
+    # Note that pnpm publish runs npm publish
+    - name: Update npm
+      shell: bash
+      run: npm install -g npm@latest
+
     # Install pnpm. https://github.com/pnpm/action-setup
     - uses: pnpm/action-setup@v4
       with:
