fixup! checkout with 0 depth

--- a/.github/workflows/v2-release.yml
+++ b/.github/workflows/v2-release.yml
@@ -10,6 +10,8 @@ jobs:
       - name: Checkout Repo
         # https://github.com/actions/checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - uses: ./.github/actions/setup
         with:
