--- a/.github/workflows/v2-release.yml
+++ b/.github/workflows/v2-release.yml
@@ -10,13 +10,12 @@ jobs:
       - name: Checkout Repo
         # https://github.com/actions/checkout
         uses: actions/checkout@v4
-
-      # Setup .npmrc file to publish to npm
-      - uses: actions/setup-node@v4
         with:
-          registry-url: "https://registry.npmjs.org"
+          fetch-depth: 0
 
       - uses: ./.github/actions/setup
+        with:
+          node-version: 22
 
       - name: Publish Pre-release to npm
         run: pnpm release-v2
