--- a/packages/open-next/package.json
+++ b/packages/open-next/package.json
@@ -37,7 +37,7 @@
     "README.md"
   ],
   "dependencies": {
-    "@ast-grep/napi": "^0.35.0",
+    "@ast-grep/napi": "^0.40.0",
     "@aws-sdk/client-cloudfront": "3.398.0",
     "@aws-sdk/client-dynamodb": "^3.398.0",
     "@aws-sdk/client-lambda": "^3.398.0",
@@ -45,22 +45,22 @@
     "@aws-sdk/client-sqs": "^3.398.0",
     "@node-minify/core": "^8.0.6",
     "@node-minify/terser": "^8.0.6",
-    "@tsconfig/node18": "^1.0.1",
-    "aws4fetch": "^1.0.18",
-    "chalk": "^5.3.0",
+    "@tsconfig/node18": "^1.0.3",
+    "aws4fetch": "^1.0.20",
+    "chalk": "^5.6.2",
     "cookie": "^1.0.2",
     "esbuild": "catalog:",
-    "express": "5.0.1",
+    "express": "^5.1.0",
     "path-to-regexp": "^6.3.0",
-    "urlpattern-polyfill": "^10.0.0",
-    "yaml": "^2.7.0"
+    "urlpattern-polyfill": "^10.1.0",
+    "yaml": "^2.8.1"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.109",
+    "@types/aws-lambda": "^8.10.158",
     "@types/express": "5.0.0",
     "@types/node": "catalog:",
     "concurrently": "^9.2.1",
-    "tsc-alias": "^1.8.8",
+    "tsc-alias": "^1.8.16",
     "typescript": "catalog:"
   },
   "bugs": {
